--- a/thyrosimIM/Project.toml
+++ b/thyrosimIM/Project.toml
@@ -11,7 +11,13 @@ DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MuladdMacro = "46d2c3a1-f734-5fdb-9937-b9b9aeba4221"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+OptimizationPolyalgorithms = "500b13db-7e66-49ce-bda4-eed966be6282"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
